fixed styles for clanwars

--- a/src/app/components/main/clanwars/clanwars.component.html
+++ b/src/app/components/main/clanwars/clanwars.component.html
@@ -3,8 +3,12 @@
 </div>
 
 <div class="floating-buttons force-show" *showOnScroll="300">
-  <a class="round-icon-button" (click)="scrollService.scrollTo(0)">
-    <fa-icon [icon]="faChevronUp" [fixedWidth]="true"></fa-icon>
-  </a>
+  <button class="p-button-rounded p-button-xl p-button p-component p-button-icon-only" (click)="scrollService.scrollTo(0)">
+    <span class="p-button-icon">
+      <fa-icon [icon]="faChevronUp" [fixedWidth]="true"></fa-icon>
+    </span>
+    <span aria-hidden="true" class="p-button-label">&nbsp;</span>
+  </button>
+
 </div>
 
