--- a/src/app/components/main/clanwars/clan-search/clan-search.component.html
+++ b/src/app/components/main/clanwars/clan-search/clan-search.component.html
@@ -1,7 +1,9 @@
 <p-autoComplete appendTo="body" [(ngModel)]="selection" (onSelect)="onSelect($event)" [suggestions]="autoCompleteResult"
-  (completeMethod)="autocomplete($event)"
-  [placeholder]="placeholder ? placeholder : 'clanwars.filters.favorites.placeholder' | translate">
+                (completeMethod)="autocomplete($event)"
+                [placeholder]="placeholder ? placeholder : 'clanwars.filters.favorites.placeholder' | translate">
   <ng-template let-item pTemplate="item">
-    [{{item.tag}}]&nbsp;{{item.name}}
+    <span class="clan-search-item p-d-flex p-ai-center">
+      <img src="assets/region-{{item.region}}.svg"/>[{{item.tag}}]&nbsp;{{item.name}}
+    </span>
   </ng-template>
 </p-autoComplete>
